service/poi-external-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
    name: poi-externals
subsets:
    - addresses:
      - ip: 121.53.201.172
      ports:
      - port: 10000
