service/poi-external-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: poi-externals
spec:
    ports:
    - port: 80
