service/poi-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-headless
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8080
  selector:
    poi: minam
