service/poi-lb.yaml
apiVersion: v1
kind: Service
metadata:
    name: poi-lb
    namespace: ingress-nginx

spec:
    type: LoadBalancer
    externalTrafficPolicy: Local
    ports:
        - port: 80
          targetPort: 8080
          protocol: TCP
    selector:
        poi: minam
