service/poi-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: poi-nodeport
spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 8080
      nodePort: 30123
    selector:
        poi: minam
