service/poi-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: poi-service
spec:
    ports:
    - port: 80
      targetPort: phttp
      name: shttp
    selector:
        poi: ready
