service/poi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi-ingress
  annotations:
    kubernetes.io/ingress.class: poi
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: poi-test.dev.9rum.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poi-service
                port:
                  number: 80
